tests/bad/assign_method_to_var.ae
/// fail: Cannot assign methods to variables

struct Foo {}

def Foo::get(this) {}

def main() {
    let f: Foo
    let g = f.get
}
